# boimp

./: Cargo.toml  build.rs  readme.md
assets/models/Tree/: license.txt  scene.gltf
examples/: dynamic.rs  load_asset.rs  planet.rs  save_asset.rs
examples/helpers/: camera_controller.rs
src/: asset_loader.rs  bake.rs  render.rs
src/shaders/: bindings.wgsl  fragment.wgsl  imposter_blit.wgsl  imposter_imposter_baker.wgsl  shared.wgsl
