[package]
name = "boimp"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"
wgpu = "27"
crossbeam-channel = "0.5"
async-channel = "2"
image = { version = "0.25.2", default-features = false }
bytemuck = "1"

# asset loader
zip = { version = "2", default-features = false }
anyhow = "*"
serde = { version = "1", features = ["derive"] }

# examples
pico-args = "0.5.0"
rand = "0.8.5"
